# stock-mail-notification

./: .env.json.sample  .gitignore  README.md  main.py  pyproject.toml
