[tool.poetry]
name = "stock-mail-notification"
version = "0.0.2"
description = "楽天証券の保有銘柄をメールで通知"
authors = ["Miura Kosuke <being.paperlefthand@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.46.0"
tzdata = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
